# ComfyUI-InspireMusic

./: README.md  __init__.py  pyproject.toml  requirements.txt  test_config.py  test_fix.py  test_modifications.py  test_no_config.py  test_server_model.py
.github/workflows/: publish.yml
file/: inspiremusic_1.5b_long.yaml
inspiremusic/cli/: frontend.py  inference.py  inspiremusic.py  model.py
inspiremusic/flow/: decoder.py  flow_matching.py
inspiremusic/hifigan/: hifigan.py
inspiremusic/llm/: llm.py
inspiremusic/text/: tokenizer.py
inspiremusic/transformer/: qwen_encoder.py
inspiremusic/utils/: file_utils.py  train_utils.py
models/InspireMusic/InspireMusic-1.5B-Long/: config.json
modules/: __init__.py  audio_utils.py  model_manager.py
nodes/: __init__.py  inspiremusic_node.py
