[project]
name = "inspiremusic"
description = ""
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["conformer", "diffusers", "deepspeed", "gdown", "gradio", "grpcio", "grpcio-tools", "hydra-core==1.3.2", "hyperpyyaml", "inflect", "librosa", "lightning", "matplotlib", "modelscope", "networkx", "omegaconf==2.3.0", "onnx", "onnxruntime-gpu", "onnxruntime", "protobuf", "pydantic", "rich", "soundfile", "tensorboard", "torch", "torchaudio", "uvicorn", "fastapi", "fastapi-cli", "WeTextProcessing", "transformers==4.46.3", "accelerate", "huggingface-hub", "pystoi", "tqdm", "pystoi", "einops", "scipy", "accelerate", "peft==0.13.2", "flash-attn==2.7.4.post1", "wget", "pyarrow", "antlr4-python3-runtime", "# 以上是官方依赖，可以不先安装，运行起来缺什么安装什么即可", "matcha-tts"]

[project.urls]
Repository = "https://github.com/fq393/ComfyUI-InspireMusic"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/fq393/ComfyUI-InspireMusic/wiki"
"Bug Tracker" = "https://github.com/fq393/ComfyUI-InspireMusic/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-InspireMusic"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

